example_ingress_controller/service_b_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  wardviaene-k8s-demo-app-v2
  namespace: default
  labels:
    app:  wardviaene-k8s-demo-app-v2
spec:
  selector:
    matchLabels:
      app: wardviaene-k8s-demo-app-v2
  replicas: 1
  template:
    metadata:
      labels:
        app: wardviaene-k8s-demo-app-v2
    spec:
      containers:
      - name: wardviaene-k8s-demo-app-v2
        image: wardviaene/k8s-demo:2
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: wardviaene-k8s-demo-app-v2-service
  namespace: default
spec:
  selector:
    app: wardviaene-k8s-demo-app-v2
  type: NodePort
  ports:
  - name: wardviaene-k8s-demo-app-v2-port
    protocol: TCP
    port: 80
    targetPort: 3000
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.
    nodePort: 30002
