example_ingress_controller/service_ingress.yaml
# An Ingress with 2 hosts and 3 endpoints
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wardviaene-k8s-demo-app-rules
  # annotations:
  #   kubernetes.io/ingress.class: k8s.io/ingress-nginx
spec:
  #To specify a default backend, uncomment the following lines:
  #defaultBackend:
  #  service:
  #    name: echoheaders-default 
  #    port:
  #      number: 80
  ingressClassName: nginx
  rules:
  - host: helloworld-v1.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wardviaene-k8s-demo-app-service
            port:
              number: 80
  - host: helloworld-v2.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wardviaene-k8s-demo-app-v2-service
            port:
              number: 80

---

apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
